tests/unit/commands/board/snapshots/sara__commands__board__render__tests__styled_snapshot_board.snap
---
source: tests/unit/commands/board/render.rs
expression: "crate::test_support::render_to_styled_string(100, 24, |f|\nrender(f, &st, &lines))"
---
[ Total: 4 | Active: 1 | Issues: 2 | Done: 0 ]                                [ Next: #4 loose end ]
[░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░] 0%

Priority:
High [███] 25%   Med [███] 25%   Low [███] 25%   None [███] 25%

╭ tk ──────────────────────────────────────────────────────────────────────────────────────────────╮
│     ID  PRI AGE           DESCRIPTION                                                            │
│ ▾        H  0m            #225 o/r  [0/2 done]                                                   │
│▶ ├─  1   H  0m       PR   wire the theme                                                         │
│  └─  2   M  0m            pin snapshots                                                          │
│ ▸        L  0m            #224 o/r  [0/1 done]                                                   │
│      4   -  0m            loose end                                                              │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
 j/k Select  |  h/l Collapse/Expand  |  Enter Open  |  ? Help  |  q Quit
--- styles ---
aabbbbbbbcbbbbbbbbbbbcbbbbbbbbbbbcbbbbbbbbbcaaddddddddddddddddddddddddddddddddaabbbbbbccccccccccccaa
bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbccc
dddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
cccccccccddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
eeeeebfffbeeeeeeeeeeebgggbeeeeeeeeeeebhhhbeeeeeeeeeeeebbbbbeeeeeeedddddddddddddddddddddddddddddddddd
dddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
iaaaaiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiii
ijjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddi
ikkkkkkkkklllkkkkkkkkkkkkkkkmmmmmmmmkkkkkkkkkkkkdddddddddddddddddddddddddddddddddddddddddddddddddddi
innnnnnnnnooonnnnnnnnnnpppppoooooooooooooodddddddddddddddddddddddddddddddddddddddddddddddddddddddddi
ieeeeiiiiiqqqebbbbbbbbbddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddi
ikkkkkkkkkrrrkkkkkkkkkkkkkkkmmmmmmmmkkkkkkkkkkkkdddddddddddddddddddddddddddddddddddddddddddddddddddi
ieeeeiiiiibbbebbbbbbbbbddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddi
iddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddi
iddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddi
iddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddi
iddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddi
iddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddi
iddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddi
iddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddi
iddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddi
iddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddi
iiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiii
ccccbbbbbbbbbbbbcccbbbbbbbbbbbbbbbbbbbbbcccccbbbbbbbbbbcbbbbbbbbbbcbbbbbdddddddddddddddddddddddddddd
--- legend ---
a fg=Some(Cyan) bg=Some(Reset) mod=BOLD
b fg=Some(DarkGray) bg=Some(Reset) mod=NONE
c fg=Some(White) bg=Some(Reset) mod=BOLD
d fg=Some(Reset) bg=Some(Reset) mod=NONE
e fg=Some(Gray) bg=Some(Reset) mod=NONE
f fg=Some(Red) bg=Some(Reset) mod=NONE
g fg=Some(Yellow) bg=Some(Reset) mod=NONE
h fg=Some(Green) bg=Some(Reset) mod=NONE
i fg=Some(Cyan) bg=Some(Reset) mod=NONE
j fg=Some(White) bg=Some(Reset) mod=BOLD | UNDERLINED
k fg=Some(DarkGray) bg=Some(Rgb(28, 30, 44)) mod=NONE
l fg=Some(White) bg=Some(Red) mod=BOLD
m fg=Some(Cyan) bg=Some(Rgb(28, 30, 44)) mod=BOLD
n fg=Some(White) bg=Some(Blue) mod=NONE
o fg=Some(White) bg=Some(Blue) mod=BOLD
p fg=Some(Magenta) bg=Some(Reset) mod=BOLD
q fg=Some(Black) bg=Some(Yellow) mod=BOLD
r fg=Some(Black) bg=Some(Green) mod=BOLD
